--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.54_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.54:0.3": "54. Wo Wassermassen zusammenfließen (2) ",
   "sn56.54:1.1": "„Mönche und Nonnen, es gibt Stellen, wo die großen Ströme, Ganges, Yamuna, Aciravatī, Sarabhū und Mahī, zusammenkommen und zusammenfließen. ",
   "sn56.54:1.2": "Angenommen, dieses Wasser würde bis auf zwei oder drei Tropfen austrocknen und verdunsten. ",
-  "sn56.54:1.3": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.54:1.3": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.54:1.4": "Was ist mehr: das Wasser dieses Zusammenflusses, das ausgetrocknet und verdunstet ist, oder die verbliebenen zwei oder drei Tropfen?“ "
 }
