--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn56.55:0.1": "Verbundene Lehrreden 56 ",
   "sn56.55:0.2": "6. Über das Erfassen ",
-  "sn56.55:0.3": "55. Die Erde (1) "
+  "sn56.55:0.3": "55. Die Erde (1) ",
+  "sn56.55:1.1": "„Mönche und Nonnen, angenommen, jemand würde sieben Lehmklümpchen in der Größe von Brustbeeren auf die große Erde legen. "
 }
