--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.55:0.2": "6. Über das Erfassen ",
   "sn56.55:0.3": "55. Die Erde (1) ",
   "sn56.55:1.1": "„Mönche und Nonnen, angenommen, jemand würde sieben Lehmklümpchen in der Größe von Brustbeeren auf die große Erde legen. ",
-  "sn56.55:1.2": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.55:1.2": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.55:1.3": "Was ist mehr: die sieben Lehmklümpchen in der Größe von Brustbeeren oder die große Erde?“ "
 }
