--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.55:1.3": "Was ist mehr: die sieben Lehmklümpchen in der Größe von Brustbeeren oder die große Erde?“ ",
   "sn56.55:1.4": "„Herr, die große Erde ist sicherlich mehr. Die sieben Lehmklümpchen in der Größe von Brustbeeren sind winzig. ",
   "sn56.55:1.5": "Verglichen mit der großen Erde zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
-  "sn56.55:1.6": "„Ebenso ist für einen edlen Schüler … "
+  "sn56.55:1.6": "„Ebenso ist für einen edlen Schüler … ",
+  "sn56.55:1.7": "Aus diesem Grund solltet ihr Meditation üben …“ "
 }
