--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.56_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.56:0.2": "6. Über das Erfassen ",
   "sn56.56:0.3": "56. Die große Erde (2) ",
   "sn56.56:1.1": "„Mönche und Nonnen, angenommen, die große Erde wäre bis auf sieben Lehmklümpchen in der Größe von Brustbeeren abgetragen und weggespült worden. ",
-  "sn56.56:1.2": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.56:1.2": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.56:1.3": "Was ist mehr: die große Erde, die abgetragen und weggespült wurde, oder die verbliebenen sieben Lehmklümpchen in der Größe von Brustbeeren?“ "
 }
