--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.56_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.56:1.3": "Was ist mehr: die große Erde, die abgetragen und weggespült wurde, oder die verbliebenen sieben Lehmklümpchen in der Größe von Brustbeeren?“ ",
   "sn56.56:1.4": "„Herr, die große Erde, die abgetragen und weggespült wurde, ist sicherlich mehr. Die verbliebenen sieben Lehmklümpchen in der Größe von Brustbeeren sind winzig. ",
   "sn56.56:1.5": "Verglichen mit der großen Erde zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
-  "sn56.56:1.6": "„Ebenso ist für einen edlen Schüler … "
+  "sn56.56:1.6": "„Ebenso ist für einen edlen Schüler … ",
+  "sn56.56:1.7": "Aus diesem Grund solltet ihr Meditation üben …“ "
 }
