--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -74,5 +74,5 @@
   "mn7:6.2": "„Gerai išdėstytas Palaimintuoju Mokymas, jis matomas čia ir dabar, nesensta, ragina įsitikinti [jo tikrumu], yra vertas taikymo, turi būti asmeniškai pažintas išmintingaisiais.”",
   "mn7:7.1": "Jis turi (tokį) patirtimi grįstą pasitikėjimą _saṅgha_:",
   "mn7:7.2": "„Gerai žengia keliu Palaimintojo mokinių bendruomenė. Teisingai žengia keliu Palaimintojo mokinių bendruomenė. Tinkamai žengia keliu Palaimintojo mokinių bendruomenė. Deramai žengia keliu Palaimintojo mokinių bendruomenė, tai yra keturios poros, aštuonių rūšių taurios būtybės. Ši Palaimintojo mokinių bendruomenė yra verta dovanų, verta svetingumo, verta aukų, verta pagarbaus pasveikinimo, neprilygstamas laukas visam pasauliui nusipelnyti gero rezultato.”",
-  "mn7:8.1": "Kai jis tiek (teršalų) išmetė, išvarė, atsikratė, (nuo tiek) išsilaisvino, su mintimi, kad jis yra turi patirtimi grįstą pasitikėjimą, jis įgyja iš prasmės įkvėpimą, jis įgyja iš Mokymo įkvėpimą, jis įgyja su Mokymu susijusį džiaugsmą."
+  "mn7:8.1": "Jam  išmetus, išvarius, atsikračius tiek (teršalų), (nuo tiek) išsilaisvinus, (ir pamačius), kad jis turi patirtimi grįstą pasitikėjimą, jį įkvėpia (praktikos) prasmė, jį įkvėpia Mokymas ir pripildo su Mokymu susijęs džiaugsmas."
 }
