--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -79,5 +79,6 @@
   "mn7:9.1": "Jis turi patirtimi grįstą pasitikėjimą Mokymu …",
   "mn7:10.1": "Jis turi patirtimi grįstą pasitikėjimą _saṅgha_, jį įkvepia (praktikos) prasmė, jį įkvepia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
   "mn7:10.2": "Kai, jis džiaugiasi, gimsta žavesys, kai, (jo) protas žavisi, nurimsta kūnas, kai jo kūnas nurimęs, jis patiria laimę, laimingojo gi protas susitelkia.",
-  "mn7:11.1": "(Pamačius), kad jis yra išmetęs, išvaręs, atsikratęs tiek (teršalų), (nuo tiek) išsilaisvinęs, jį įkvėpia (praktikos) prasmė, jį įkvėpia Mokymas ir pripildo su Mokymu susijęs džiaugsmas."
+  "mn7:11.1": "(Pamačius), kad jis yra išmetęs, išvaręs, atsikratęs tiek (teršalų), (nuo tiek) išsilaisvinęs, jį įkvėpia (praktikos) prasmė, jį įkvėpia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
+  "mn7:11.2": "Kai, jis džiaugiasi, gimsta žavesys, kai, (jo) protas žavisi, nurimsta kūnas, kai jo kūnas nurimęs, jis patiria laimę, laimingojo gi protas susitelkia."
 }
