--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -687,6 +687,7 @@
   "sn-name:2059.sn56.54": "Wo Wassermassen zusammenfließen (2) ",
   "sn-name:2060.sn56.55": "Die Erde (1) ",
   "sn-name:2061.sn56.56": "Die Erde (2) ",
+  "sn-name:2062.sn56.57": "Das Weltmeer (1) ",
   "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
