--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn56.57:0.1": "Verbundene Lehrreden 56 ",
   "sn56.57:0.2": "6. Über das Erfassen ",
-  "sn56.57:0.3": "57. Das Weltmeer (1) "
+  "sn56.57:0.3": "57. Das Weltmeer (1) ",
+  "sn56.57:1.1": "„Mönche und Nonnen, angenommen, jemand würde zwei oder drei Tropfen Wasser aus dem Weltmeer entnehmen. "
 }
