--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.57:0.2": "6. Über das Erfassen ",
   "sn56.57:0.3": "57. Das Weltmeer (1) ",
   "sn56.57:1.1": "„Mönche und Nonnen, angenommen, jemand würde zwei oder drei Tropfen Wasser aus dem Weltmeer entnehmen. ",
-  "sn56.57:1.2": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.57:1.2": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.57:1.3": "Was ist mehr: die zwei oder drei Tropfen, die entnommen wurden, oder das Wasser im Weltmeer?“ "
 }
