--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.53_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "sn56.53:1.1": "„Mönche und Nonnen, es gibt Stellen, wo die großen Ströme, Ganges, Yamuna, Aciravatī, Sarabhū und Mahī, zusammenkommen und zusammenfließen. ",
   "sn56.53:1.2": "Angenommen, jemand würde zwei oder drei Tropfen Wasser von einer solchen Stelle entnehmen. ",
   "sn56.53:1.3": "Was meint ihr, Mönche und Nonnen? ",
-  "sn56.53:1.4": "Was ist mehr: die zwei oder drei Tropfen, die entnommen wurden, oder das Wasser dieses Zusammenflusses?“ ",
+  "sn56.53:1.4": "Was ist mehr: die zwei oder drei Tropfen, die entnommen wurden, oder das Wasser in diesem Zusammenfluss?“ ",
   "sn56.53:1.5": "„Herr, das Wasser dieses Zusammenflusses ist sicherlich mehr. Die zwei oder drei Tropfen, die entnommen wurden, sind winzig. ",
   "sn56.53:1.6": "Verglichen mit dem Wasser des Zusammenflusses zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
   "sn56.53:1.7": "„Ebenso ist für einen edlen Schüler … ",
