--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn56.57:1.1": "„Mönche und Nonnen, angenommen, jemand würde zwei oder drei Tropfen Wasser aus dem Weltmeer entnehmen. ",
   "sn56.57:1.2": "Was meint ihr, Mönche und Nonnen? ",
   "sn56.57:1.3": "Was ist mehr: die zwei oder drei Tropfen, die entnommen wurden, oder das Wasser im Weltmeer?“ ",
-  "sn56.57:1.4": "„Herr, das Wasser im Weltmeer ist sicherlich mehr. Die zwei oder drei Tropfen, die entnommen wurden, sind winzig. "
+  "sn56.57:1.4": "„Herr, das Wasser im Weltmeer ist sicherlich mehr. Die zwei oder drei Tropfen, die entnommen wurden, sind winzig. ",
+  "sn56.57:1.5": "Verglichen mit dem Wasser im Weltmeer zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ "
 }
