--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.58_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.58:0.2": "6. Über das Erfassen ",
   "sn56.58:0.3": "58. Das Weltmeer (2) ",
   "sn56.58:1.1": "„Mönche und Nonnen, angenommen, das Wasser im Weltmeer würde bis auf zwei oder drei Tropfen austrocknen und verdunsten. ",
-  "sn56.58:1.2": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.58:1.2": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.58:1.3": "Was ist mehr: das Wasser des Weltmeeres, das ausgetrocknet und verdunstet ist, oder die zwei oder drei verbliebenen Tropfen?“ "
 }
