--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.58_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.58_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.58:1.3": "Was ist mehr: das Wasser des Weltmeeres, das ausgetrocknet und verdunstet ist, oder die zwei oder drei verbliebenen Tropfen?“ ",
   "sn56.58:1.4": "„Herr, das Wasser des Weltmeeres, das ausgetrocknet und verdunstet ist, ist sicherlich mehr. Die zwei oder drei verbliebenen Tropfen sind winzig. ",
   "sn56.58:1.5": "Verglichen mit dem Wasser des Weltmeeres, das ausgetrocknet und verdunstet ist, zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
-  "sn56.58:1.6": "„Ebenso ist für einen edlen Schüler … "
+  "sn56.58:1.6": "„Ebenso ist für einen edlen Schüler … ",
+  "sn56.58:1.7": "Aus diesem Grund solltet ihr Meditation üben …“ "
 }
