--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.59_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.59:0.3": "59. Ein Berg (1) ",
   "sn56.59:1.1": "„Mönche und Nonnen, angenommen, jemand würde sieben senfkorngroße Kieselsteine auf den Himalaya, den König der Berge, legen. ",
   "sn56.59:1.2": "Was meint ihr, Mönche und Nonnen? ",
-  "sn56.59:1.3": "Was ist mehr: sieben senfkorngroße Kieselsteine oder der Himalaya, der König der Berge?“ "
+  "sn56.59:1.3": "Was ist mehr: sieben senfkorngroße Kieselsteine oder der Himalaya, der König der Berge?“ ",
+  "sn56.59:1.4": "„Herr, der Himalaya, der König der Berge, ist sicherlich mehr. Die sieben senfkorngroßen Kieselsteine sind winzig. "
 }
