--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.59_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn56.59:1.2": "Was meint ihr, Mönche und Nonnen? ",
   "sn56.59:1.3": "Was ist mehr: sieben senfkorngroße Kieselsteine oder der Himalaya, der König der Berge?“ ",
   "sn56.59:1.4": "„Herr, der Himalaya, der König der Berge, ist sicherlich mehr. Die sieben senfkorngroßen Kieselsteine sind winzig. ",
-  "sn56.59:1.5": "Verglichen mit dem Himalaya zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ "
+  "sn56.59:1.5": "Verglichen mit dem Himalaya zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
+  "sn56.59:1.6": "„Ebenso ist für einen edlen Schüler … "
 }
