--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.60_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.60:0.3": "60. Ein Berg (2) ",
   "sn56.60:1.1": "„Mönche und Nonnen, angenommen, der Himalaya, der König der Berge, wäre bis auf sieben senfkorngroße Kieselsteine abgetragen und weggespült worden. ",
   "sn56.60:1.2": "Was meint ihr, Mönche und Nonnen? ",
-  "sn56.60:1.3": "Was ist mehr: der Teil des Himalaya, des Königs der Berge, der abgetragen und weggespült wurde, oder die verbliebenen sieben senfkorngroßen Kieselsteine?“ "
+  "sn56.60:1.3": "Was ist mehr: der Teil des Himalaya, des Königs der Berge, der abgetragen und weggespült wurde, oder die verbliebenen sieben senfkorngroßen Kieselsteine?“ ",
+  "sn56.60:1.4": "„Herr, der Teil des Himalaya, des Königs der Berge, der abgetragen und weggespült wurde, ist sicherlich mehr. Die sieben senfkorngroßen Kieselsteine sind winzig. "
 }
