--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -90,5 +90,6 @@
   "mn7:16.1": "Jis gyvena aprėpęs lygiažiūros sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs lygiažiūros sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis.",
   "mn7:17.1": "Jis supranta: „Yra šitai, yra tai, kas žemiau (už tai), yra tai, kas aukščiau. Yra išėjimas už (viso) šio suvokiamo (lauko ribų).”",
   "mn7:18.1": "Jam taip žinant ir matant, jo protas išsilaisvina nuo geismo ydos, išsilaisvina nuo būties troškimo ydos, išsilaisvina nuo nežinojimo ydos.",
-  "mn7:18.2": "Išsilaisvinus ateina žinojimas, kad yra išsilaisvinta."
+  "mn7:18.2": "Išsilaisvinus ateina žinojimas, kad yra išsilaisvinta.",
+  "mn7:18.3": "Jis supranta, kad panaikintas (kitas) gimimas, nugyventas šventas gyvenimas, padaryta tai, kas turi būti padaryta, po šios būties daugiau nebus nieko."
 }
