--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -93,5 +93,6 @@
   "mn7:18.2": "Išsilaisvinus ateina žinojimas, kad yra išsilaisvinta.",
   "mn7:18.3": "Jis supranta, kad panaikintas (kitas) gimimas, nugyventas šventas gyvenimas, padaryta tai, kas turi būti padaryta, po šios būties daugiau nebus nieko.",
   "mn7:18.4": "Tokį, vienuoliai, vadina",
-  "mn7:18.5": "„vienuoliu, nusiprausiusiu vidiniu prausimusi.”"
+  "mn7:18.5": "„vienuoliu, nusiprausiusiu vidiniu prausimusi.”",
+  "mn7:19.1": "Tuo gi pat metu netoli Palaimintojo sėdėjo brahmanas Sundarika Bhāradvāja. "
 }
