--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -83,7 +83,7 @@
   "an4.198:11.3": "Wenn er mit dem Ohr einen Ton hört … ",
   "an4.198:11.4": "Wenn er mit der Nase einen Duft riecht … ",
   "an4.198:11.5": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
-  "an4.198:11.6": "Wenn sie mit dem Körper eine Berührung empfindet … ",
+  "an4.198:11.6": "Wenn er mit dem Körper eine Berührung empfindet … ",
   "an4.198:11.7": "Wenn sie mit dem Geist einen Gedanken erkennt, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.198:11.8": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Denkvermögen und hält es im Zaum. ",
   "an4.198:11.9": "Wenn sie diese edle Zügelung der Sinne besitzt, erfährt sie im Innern eine fleckenlose Wonne. ",
