--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -84,7 +84,7 @@
   "an4.198:11.4": "Wenn er mit der Nase einen Duft riecht … ",
   "an4.198:11.5": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
   "an4.198:11.6": "Wenn er mit dem Körper eine Berührung empfindet … ",
-  "an4.198:11.7": "Wenn sie mit dem Geist einen Gedanken erkennt, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
+  "an4.198:11.7": "Wenn er mit dem Geist einen Gedanken erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.198:11.8": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Denkvermögen und hält es im Zaum. ",
   "an4.198:11.9": "Wenn sie diese edle Zügelung der Sinne besitzt, erfährt sie im Innern eine fleckenlose Wonne. ",
   "an4.198:12.1": "Sie handelt umsichtig, wenn sie ausgeht und zurückkommt, wenn sie hin- und wegschaut, wenn sie die Glieder beugt und streckt, wenn sie die äußere Robe, die Schale und die Roben trägt, wenn sie isst, trinkt, kaut und schmeckt, wenn sie Urin und Kot ausscheidet, wenn sie geht, steht, sitzt, schläft und wacht, redet und schweigt. ",
