--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -86,7 +86,7 @@
   "an4.198:11.6": "Wenn er mit dem Körper eine Berührung empfindet … ",
   "an4.198:11.7": "Wenn er mit dem Geist einen Gedanken erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.198:11.8": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Denkvermögen und hält es im Zaum. ",
-  "an4.198:11.9": "Wenn sie diese edle Zügelung der Sinne besitzt, erfährt sie im Innern eine fleckenlose Wonne. ",
+  "an4.198:11.9": "Wenn er diese edle Zügelung der Sinne besitzt, erfährt er im Innern eine fleckenlose Wonne. ",
   "an4.198:12.1": "Sie handelt umsichtig, wenn sie ausgeht und zurückkommt, wenn sie hin- und wegschaut, wenn sie die Glieder beugt und streckt, wenn sie die äußere Robe, die Schale und die Roben trägt, wenn sie isst, trinkt, kaut und schmeckt, wenn sie Urin und Kot ausscheidet, wenn sie geht, steht, sitzt, schläft und wacht, redet und schweigt. ",
   "an4.198:13.1": "Wenn sie diesen ganzen Umfang der edlen Sittlichkeit und diese edle Zügelung der Sinne sowie diese edle Achtsamkeit und Umsicht besitzt, ",
   "an4.198:13.2": "sucht sie einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
