--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -88,7 +88,7 @@
   "an4.198:11.8": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Denkvermögen und hält es im Zaum. ",
   "an4.198:11.9": "Wenn er diese edle Zügelung der Sinne besitzt, erfährt er im Innern eine fleckenlose Wonne. ",
   "an4.198:12.1": "Er handelt umsichtig, wenn er ausgeht und zurückkommt, wenn er hin- und wegschaut, wenn er die Glieder beugt und streckt, wenn er die äußere Robe, die Schale und die Roben trägt, wenn er isst, trinkt, kaut und schmeckt, wenn er Urin und Kot ausscheidet, wenn er geht, steht, sitzt, schläft und wacht, redet und schweigt. ",
-  "an4.198:13.1": "Wenn sie diesen ganzen Umfang der edlen Sittlichkeit und diese edle Zügelung der Sinne sowie diese edle Achtsamkeit und Umsicht besitzt, ",
+  "an4.198:13.1": "Wenn er diesen ganzen Umfang der edlen Sittlichkeit und diese edle Zügelung der Sinne sowie diese edle Achtsamkeit und Umsicht besitzt, ",
   "an4.198:13.2": "sucht sie einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
   "an4.198:13.3": "Nach dem Essen kommt sie vom Almosengang zurück, setzt sich mit gekreuzten Beinen hin, den Körper gerade aufgerichtet, und verankert eben da die Achtsamkeit. ",
   "an4.198:13.4": "Sie gibt das Verlangen nach der Welt auf, meditiert mit einem Herzen, das frei von Verlangen ist, und läutert den Geist von Verlangen. ",
