--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -90,7 +90,7 @@
   "an4.198:12.1": "Er handelt umsichtig, wenn er ausgeht und zurückkommt, wenn er hin- und wegschaut, wenn er die Glieder beugt und streckt, wenn er die äußere Robe, die Schale und die Roben trägt, wenn er isst, trinkt, kaut und schmeckt, wenn er Urin und Kot ausscheidet, wenn er geht, steht, sitzt, schläft und wacht, redet und schweigt. ",
   "an4.198:13.1": "Wenn er diesen ganzen Umfang der edlen Sittlichkeit und diese edle Zügelung der Sinne sowie diese edle Achtsamkeit und Umsicht besitzt, ",
   "an4.198:13.2": "sucht er einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
-  "an4.198:13.3": "Nach dem Essen kommt sie vom Almosengang zurück, setzt sich mit gekreuzten Beinen hin, den Körper gerade aufgerichtet, und verankert eben da die Achtsamkeit. ",
+  "an4.198:13.3": "Nach dem Essen kommt er vom Almosengang zurück, setzt sich mit gekreuzten Beinen hin, den Körper gerade aufgerichtet, und verankert eben da die Achtsamkeit. ",
   "an4.198:13.4": "Sie gibt das Verlangen nach der Welt auf, meditiert mit einem Herzen, das frei von Verlangen ist, und läutert den Geist von Verlangen. ",
   "an4.198:13.5": "Sie gibt bösen Willen und Niedertracht auf, meditiert mit einem Herzen, das frei von bösem Willen ist, voller Anteilnahme für alle Lebewesen, und läutert den Geist von bösem Willen. ",
   "an4.198:13.6": "Sie gibt Dumpfheit und Benommenheit auf, meditiert mit einem Herzen, das frei von Dumpfheit und Benommenheit ist, sie nimmt Licht wahr, ist achtsam und umsichtig und läutert den Geist von Dumpfheit und Benommenheit. ",
