--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -97,7 +97,7 @@
   "an4.198:13.7": "Er gibt Rastlosigkeit und Reue auf, meditiert ohne Rastlosigkeit, mit innerlich friedvollem Geist, und läutert den Geist von Rastlosigkeit und Reue. ",
   "an4.198:13.8": "Er gibt den Zweifel auf, meditiert, indem er über den Zweifel hinausgegangen ist, nicht im Unklaren über taugliche Eigenschaften, und läutert den Geist von Zweifel. ",
   "an4.198:13.9": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
-  "an4.198:13.10": "Dann tritt sie, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … Sie tritt in die zweite Vertiefung ein … sie tritt in die dritte Vertiefung ein … sie tritt in die vierte Vertiefung ein und verweilt darin. ",
+  "an4.198:13.10": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … Er tritt in die zweite Vertiefung ein … er tritt in die dritte Vertiefung ein … er tritt in die vierte Vertiefung ein und verweilt darin. ",
   "an4.198:14.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, dann streckt sie ihn aus auf die Erinnerung an frühere Leben … ",
   "an4.198:14.2": "auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen … ",
   "an4.198:14.3": "auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
