--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -105,7 +105,7 @@
   "an4.198:14.5": "Er versteht wahrhaftig: ‚Das sind die Befleckungen.‘ … ‚Das ist der Ursprung der Befleckungen.‘ … ‚Das ist das Aufhören der Befleckungen.‘ … ‚Das ist die Übung, die zum Aufhören der Befleckungen führt.‘ ",
   "an4.198:15.1": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Fortsetzung des Daseins und der Unwissenheit. ",
   "an4.198:15.2": "Wenn er befreit ist, weiß er, er ist befreit. ",
-  "an4.198:15.3": "Sie versteht: ‚Wiedergeburt ist beendet, die spirituelle Reise ist abgeschlossen, was zu tun war, ist getan, es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
+  "an4.198:15.3": "Er versteht: ‚Wiedergeburt ist beendet, die spirituelle Reise ist abgeschlossen, was zu tun war, ist getan, es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "an4.198:15.4": "So quält jemand weder sich selbst noch andere, verschreibt sich der Übung, weder sich noch andere zu quälen, ",
   "an4.198:15.5": "und lebt in diesem Leben ohne Wünsche, erloschen, kühl geworden, voller Wonne, in seinem Wesen heilig geworden. ",
   "an4.198:15.6": "Das sind die vier Menschen, die man in der Welt findet.“ "
